--- a/package.json
+++ b/package.json
@@ -4,40 +4,60 @@
   "description": "A Vue.js project",
   "author": "丁磊",
   "private": true,
+  "scripts": {
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js"
+  },
   "dependencies": {
-    "extract-text-webpack-plugin": "^0.8.2"
+    "vue": "^1.0.18",
+    "babel-runtime": "^5.8.0"
   },
   "devDependencies": {
-    "mockjs": "^1.0.0",
-    "css-loader": "^0.20.2",
-    "cssnext-loader": "^1.0.1",
-    "fastclick": "^1.0.6",
-    "file-loader": "^0.8.5",
-    "hammerjs": "^2.0.4",
-    "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^1.6.2",
-    "jshint-loader": "^0.8.3",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-polyfill": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-stage-2": "^6.1.18",
+    "babel-runtime": "^5.8.0",
 
-    "vue": "^1.0.10",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^4.0.10",
+
+    "connect-history-api-fallback": "^1.1.0",
+    "css-loader": "^0.23.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "function-bind": "^1.0.2",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.12.0",
+    "json-loader": "^0.5.4",
+    "ora": "^0.2.0",
+    "shelljs": "^0.6.0",
+    "url-loader": "^0.5.7",
+
+    "mockjs": "^1.0.0",
+    "react-cookie": "^0.4.5",
+
+
+    "vue-waterfall":"^0.2.1",
+    "vue-materialize":"^0.1.11",
     "vue-swipe":"^0.2.0",
     "vue-lazyload": "^0.4.0",
-    "vue-async-data":"^1.0.2",
-    "vue-router": "^0.7.5",
-    "vue-style-loader": "^1.0.0",
+    "vue-resource": "^0.7.0",
 
-    "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1"
-  },
-  "scripts": {
-    "start": "export PRODUCTION=1 && webpack --progress --hide-modules",
-    "build":"set PRODUCTION=1 && webpack --progress --hide-modules",
-    "dev": "webpack-dev-server --progress --profile --colors --inline",
-    "port": "webpack-dev-server --inline --port 9090 ",
-    "ip": "webpack-dev-server  --progress --colors --hot --inline --host=0.0.0.0  --port 8080"
-  },
-  "license": "ISC"
+    "vuex": ">=0.6.2",
+    "vue-router": ">=0.7.13",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^8.2.1",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-merge": "^0.8.3",
+    "webpack-zepto": "0.0.1"
+  }
 }
