--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+.DS_Store
 node_modules/
-build/
-d.html
+dist/
 npm-debug.log
-.svn/
+selenium-debug.log
+test/unit/coverage
+test/e2e/reports
+.idea
