--- a/package.json
+++ b/package.json
@@ -2,26 +2,23 @@
   "name": "vue-chat",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "丁磊",
+  "author": "dinglei",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "test": ""
   },
   "dependencies": {
-    "babel-runtime": "^5.8.0",
-    "vue": "^1.0.18",
-    "wilddog": "^0.6.3"
+    "vue": "^1.0.21",
+    "babel-runtime": "^6.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-polyfill": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-es2015-rollup": "^1.1.1",
-    "babel-preset-stage-2": "^6.1.18",
-    "babel-runtime": "^5.8.0",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "eventsource-polyfill": "^0.9.6",
@@ -35,24 +32,21 @@
     "ora": "^0.2.0",
     "shelljs": "^0.6.0",
     "url-loader": "^0.5.7",
-    "mockjs": "^1.0.0",
-    "react-cookie": "^0.4.5",
-    "vue-waterfall": "^0.2.1",
-    "vue-materialize": "^0.1.11",
-    "vue-swipe": "^0.2.0",
-    "vue-lazyload": "^0.4.0",
-    "vue-resource": "^0.7.0",
-    "vuex": ">=0.6.2",
-    "vue-router": ">=0.7.13",
+
+    "vue-router": "^0.7.13",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.2.1",
+    "vue-loader": "^8.3.0",
     "vue-style-loader": "^1.0.0",
+    "vue-toast-mobile": "^0.0.6",
+
+
+    "wildvue": "^1.0.4",
+    "wilddog": "^0.6.2",
+
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.8.3",
-    "webpack-zepto": "0.0.1"
+    "webpack-merge": "^0.8.3"
   }
 }
