--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "shelljs": "^0.6.0",
     "url-loader": "^0.5.7",
 
-    "vue-router": "^0.7.13",
+    
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.3.0",
     "vue-style-loader": "^1.0.0",
     "vue-toast-mobile": "^0.0.6",
     "vuex": "^0.6.2",
+    "vue-router": "^0.7.13",
+    "vuex-router-sync": "^1.0.0",
 
     "wildvue": "^1.0.4",
     "wilddog": "^0.6.2",
