--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": ""
   },
   "dependencies": {
-    "vue": "^1.0.21",
+    "avoscloud-sdk": "^0.6.10",
     "babel-runtime": "^6.0.0",
-    "wildvue": "^1.0.4",
+    "leancloud-realtime": "^3.0.0-beta.3",
+    "leancloud-realtime-typed-messages": "^1.0.0-beta.2",
+    "materialize-css": "^0.97.6",
+    "vue": "^1.0.21",
     "wilddog": "^0.6.2",
-    "materialize-css": "^0.97.6"
+    "wildvue": "^1.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -35,8 +38,6 @@
     "ora": "^0.2.0",
     "shelljs": "^0.6.0",
     "url-loader": "^0.5.7",
-
-
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.3.0",
@@ -45,7 +46,7 @@
     "vuex": "^0.6.2",
     "vue-router": "^0.7.13",
     "vuex-router-sync": "^1.0.0",
-
+    "vue-antd": "^0.2.9",
 
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
